# arc-kit

./: .gitignore  ARTICLE.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY-MATRIX.md  GITHUB-DISCUSSION-POST.md  LICENSE  OPENAI-INTEGRATION-PLAN.md  PHASE-1-COMPLETION.md  PUSH-TO-GITHUB.md  README.md  RELEASE-ANNOUNCEMENT-SHORT.md  RELEASE-ANNOUNCEMENT.md  RELEASE-ARTICLE-v0.3.0.md  RELEASE-v0.1.0.md  RELEASE-v0.2.0.md  RELEASE-v0.2.1.md  RELEASE-v0.2.2.md  RELEASE-v0.3.0.md  RELEASE-v0.3.1.md  RELEASE-v0.3.2.md  RELEASE-v0.3.3.md  RELEASE-v0.3.4.md  RELEASE-v0.3.5.md  RELEASE-v0.3.6.md  RELEASE-v0.4.0.md  RELEASE-v0.4.1.md  SETUP.md  UI-IMPLEMENTATION-PLAN.md  arckit-backlog-command-design.md  gds-service-assessment-command-design.md  pyproject.toml
.arckit/templates/: backlog-template.md  jsp-936-template.md
.claude/: COMMANDS.md
.claude/commands/: arckit.ai-playbook.md  arckit.data-model.md  arckit.diagram.md  arckit.jsp-936.md  arckit.principles.md  arckit.requirements.md  arckit.research.md  arckit.secure.md  arckit.servicenow.md  arckit.sow.md  arckit.tcop.md  arckit.traceability.md
.codex/: README.md
.codex/prompts/: arckit.data-model.md  arckit.requirements.md  arckit.research.md  arckit.service-assessment.md  arckit.sow.md
.gemini/: README.md
.gemini/commands/arckit/: ai-playbook.toml  analyze.toml  atrs.toml  data-model.toml  diagram.toml  (+19 more)
docs/: README.md  index.html  mcp-integration-plan.md  requirements.md
docs/guides/: analyze.md  diagram.md  plan.md  traceability.md  wardley-mapping.md
scripts/: README.md
src/arckit_cli/: __init__.py
