[project]
name = "arckit-cli"
version = "0.1.0"
description = "ArcKit CLI - Enterprise Architecture Governance & Vendor Procurement Toolkit"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["architecture", "enterprise", "governance", "procurement", "rfp", "vendor-selection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/github/arc-kit"
Documentation = "https://github.com/github/arc-kit/blob/main/README.md"
Repository = "https://github.com/github/arc-kit"
Issues = "https://github.com/github/arc-kit/issues"

[project.scripts]
arckit = "arckit_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arckit_cli"]
